<resources>
    <string name="app_name">Culinary Companion</string>
    <string name="discover_save_and_create_recipes_with_ease_culinary_companion_offers_helpful_tips_and_personalized_recommendations_making_every_meal_enjoyable">Discover, save, and create recipes with ease. Culinary Companion offers helpful tips and personalized recommendations—making every meal enjoyable.</string>
    <string name="culinary_companion">Culinary Companion</string>
    <string name="app_logo">App Logo</string>
    <string name="see_recipes">SEE RECIPES</string>
    <string name="category">Category</string>
    <string name="add_recipe">ADD RECIPE</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="ingredients">Ingredients</string>
    <string name="title">Title</string>
    <string name="instructions">Instructions</string>
    <string name="home">Home</string>
    <string name="add_new">Add New</string>
    <string name="back">Back</string>
    <string name="chicken_noodles">Chicken Noodles</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipeBack">Back</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="create_new_recipe">Create New Recipe</string>
    <string name="home_welcome">Welcome\t\t\t</string>
    <string name="recipes">%1$s Recipes</string>
    <string name="home_icon">home_icon</string>
    <string name="add_new_icon">add_new_icon</string>
    <string name="upload_image_title">Upload Image</string>
    <string name="no_image_selected_placeholder">No image selected</string>
    <string name="upload_btn">UPLOAD</string>

    <string-array name="recipe_categories">
        <item>Select Category</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Desserts</item>
        <item>Other</item>
    </string-array>

</resources>